@@ -489,12 +489,19 @@ booting from CD or USB stick. If you are loading preseed files from
 the network, you can pass network config parameters in using kernel
 boot parameters.
 
-</para>
+</para><para>
+
+If you need to pick a particular interface when netbooting before loading
+a preseed file from the network, use a boot parameter such as
+<userinput>netcfg/choose_interface=<replaceable>eth1</replaceable></userinput>.
 
 <informalexample role="example"><screen>
 # netcfg will choose an interface that has link if possible. This makes it
 # skip displaying a list if there is more than one interface.
 d-i netcfg/choose_interface select auto
+
+# To pick a particular interface instead:
+#d-i netcfg/choose_interface select eth1
 
 # If you have a slow dhcp server and the installer times out waiting for
 # it, this might be useful.
