@@ -24,6 +24,9 @@ installation-guide (2006XXXX) UNRELEASED; urgency=low
   * Add a few more supports-floppy-boot and bootable-usb conditionals to
     make it easier to turn all this off in rebuilds of the manual.
   * Etch uses X.Org 6.9, and xserver-xorg instead of xserver-xfree86.
+  * Document how to pick a particular interface with
+    netcfg/choose_interface, including how to do this before reading a
+    preseed file.
 
  -- Frans Pop <fjp@debian.org>  Wed,  4 Jan 2006 23:03:45 +0100
 
